remove dist, add to gitignore, lazy images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Parkside Public House</title>
+  <title>Parkside Public House | Food, Drinks, Friends</title>
+  <meta name="description" content="Garfield Park resturaunt located south of Indianapolis, Indiana. Serving food, drinks, and showcasing local art. Focuses on high quality food and atmosphere, cultivating a unique meeting place for locals and visitors alike.">
+  <meta property="og:title" content="Parkside Public House | Food, Drinks, Friends">
+  <meta property="og:description" content="Garfield Park resturaunt located south of Indianapolis, Indiana. Serving food, drinks, and showcasing local art. Focuses on high quality food and atmosphere, cultivating a unique meeting place for locals and visitors alike.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/MisuseofMana/parkside-public-house/main/outside.jpg">
+  <meta property="og:url" content="https://www.parksidepublichouse.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Parkside Public House">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Parkside Public House">
+  <meta name="twitter:description" content="Garfield Park resturaunt located south of Indianapolis, Indiana. Serving food, drinks, and showcasing local art. Focuses on high quality food and atmosphere, cultivating a unique meeting place for locals and visitors alike.">
+  <meta name="twitter:image" content="https://www.parksidepublichouse.com">
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KGH7F6BX');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGH7F6BX"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
